primer commit task2

--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,15 @@
 </head>
 
 <body class="bg-dark-subtle">
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+    <div class="container" id="cont6">
+        <header class="d-flex flex-wrap justify-content-center py-3">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="logo" id="logo" class="bi me-2" width="100" height="30">
           </a>
     
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
@@ -43,7 +43,7 @@
     </header>
   </div>
 
-  <main class="container bg-danger-subtle">
+  <main class="container bg-danger-subtle" id="contactmain">
 
 
 
@@ -69,13 +69,10 @@
         <button type="submit" class="btn btn-primary mx-0" id="submit">Submit</button>
       </div>
     </form>
-
-
-
   </main>
 
 
-  <footer class="d-flex flex-wrap justify-content-between align-items-center p-3 mt-4 border-top"> 
+  <footer class="d-flex flex-wrap justify-content-between align-items-center p-2 mt-4 border-top"> 
     <ul class="nav col-md-4 list-unstyled d-flex ">
         <li class="ms-3 "><a class="text-muted" href="#" >
             <i class="bi bi-instagram" id="logo1"></i>
