--- a/details.html
+++ b/details.html
@@ -13,15 +13,15 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
-<body class="bg-dark-subtle">
+<body class="bg-dark-subtle" id="cont5">
     <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+        <header class="d-flex flex-wrap justify-content-center py-3 ">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="logo" id="logo" class="bi me-2" width="100" height="30">
           </a>
     
           <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
@@ -58,7 +58,7 @@
 
 </main>
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center p-3 border-top mb-0"> 
+<footer class="d-flex flex-wrap justify-content-between align-items-center p-2 mt-4 border-top"> 
   <ul class="nav col-md-4 list-unstyled d-flex ">
       <li class="ms-3 "><a class="text-muted" href="#" >
           <i class="bi bi-instagram" id="logo1"></i>
