--- a/pastEvents.html
+++ b/pastEvents.html
@@ -14,14 +14,14 @@
 </head>
 
 <body class="bg-dark-subtle">
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
+    <div class="container" id="cont2">
+        <header class="d-flex flex-wrap justify-content-center py-3">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <img src="./assets/img/Logo_Amazing_Events.png" alt="logo" id="logo" class="bi me-2" width="100" height="30">
           </a>
     
           <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
@@ -73,7 +73,7 @@
               </form>
             </div>
           </nav>
-
+<!--
 <div>
         <div class="row row-cols-1 row-cols-md-4 g-4 p-3 bg-danger-subtle "> 
             <div class="col">
@@ -132,11 +132,13 @@
               </div>
             </div>
           </div>
+          !-->
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 m-1 bg-danger-subtle" id="CardsPastE"> </div>
 
     </main>
 
     
-    <footer class="d-flex flex-wrap justify-content-between align-items-center p-3 mt-4 border-top"> 
+    <footer class="d-flex flex-wrap justify-content-between align-items-center p-2 mt-4 border-top"> 
         <ul class="nav col-md-4 list-unstyled d-flex ">
             <li class="ms-3 "><a class="text-muted" href="#" >
                 <i class="bi bi-instagram" id="logo1"></i>
@@ -156,6 +158,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="./scripts/data.js"></script>
+    <script src="./scripts/function.js"></script>
+    <script src="./scripts/pastEvents.js"></script>
 </body>
 
 </html>
