--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -43,7 +43,7 @@
       </div>
 
     <main class="container">
-
+<!-- 
         <nav class="navbar bg-body-tertiary " id="nav">
             <div class="container-fluid">   
                 <div class="form-check form-check-inline ">
@@ -72,7 +72,7 @@
                 <button class="btn btn-outline-success border-danger" type="submit" id="boton">Search</button>
               </form>
             </div>
-          </nav>
+          </nav> -->
 <!--
 <div>
         <div class="row row-cols-1 row-cols-md-4 g-4 p-3 bg-danger-subtle"> 
@@ -133,7 +133,21 @@
             </div>
           </div> 
           !-->
-          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 m-1 bg-danger-subtle" id="CardsUpcomingE"> </div>
+          <!-- <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 m-1 bg-danger-subtle" id="CardsUpcomingE"> </div> -->
+
+          <section class="form container-fluid" >
+          <form class="form-checkbox" id="form" action="#">
+          </form>
+          <form action="#" id="search-bar">
+            <input type="text" id="text" >
+            <input type="submit" id="submit"> 
+        </form>
+      </form>
+        </section>
+
+      <section class="row m-2" id="container-cards-upcomingEvents">
+                  
+      </section>
 
     </main>
 
