--- a/stats.html
+++ b/stats.html
@@ -43,82 +43,58 @@
   </div>
 
 <main class="container">
-   
-    <table class="bg-danger-subtle m-3 table-bordered">
-      <tr>
-        <th colspan="3">Events statistics</th>
-      </tr>
-      <tr>
-        <td scope="col">Fila 1, Columna 1</td>
-        <td scope="col">Fila 1, Columna 2</td>
-        <td scope="col">Fila 1, Columna 3</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-    </table>
-    <table class="bg-danger-subtle m-3 table-bordered">
-      <tr>
-        <th  colspan="3">Upcoming events statistics by category</th>
-      </tr>
-      <tr>
-        <td scope="col">Categories</td>
-        <td scope="col">Revenues</td>
-        <td scope="col">Percentage of attendance</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-    </table>
-    <table class="bg-danger-subtle m-3 table-bordered">
-      <tr>
-        <th colspan="3">Past Events statistics by category</th>
-      </tr>
-      <tr>
-        <td scope="col">Categories</td>
-        <td scope="col">Revenues</td>
-        <td scope="col">Percentage of attendance</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-      <tr>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-      </tr>
-    </table>
+ 
+ <div class="d-flex flex-column align-items-center justify-content-center">
+ <table class="bg-danger-subtle m-3 "> 
+   <thead>
+     <tr>
+       <th colspan="3">Events statistics</th>
+     </tr>
+     <tr class="text-center">
+       <td>Events with the highest percentage of attendance</td>
+       <td>Events with the lowest percentage of attendance</td>
+       <td>Event with larger capacity</td>
+     </tr>
+   </thead>
+   <tbody id="tableEventStatistics">
+   </tbody>
+ </table>
+
+ <table class="bg-danger-subtle m-3 ">
+   <thead>
+     <tr>
+       <th colspan="3">Upcoming events statistics by category</th>
+     </tr>
+   </thead>
+   <tbody id="tableUpcomingEvents">
+     <tr class="text-center">
+       <td>
+         Categories
+       </td>
+       <td>Estimated</td>
+       <td>Percentage of estimated attendance</td>
+     </tr>
+   </tbody>
+ </table>
+
+ <table class="bg-danger-subtle m-3 ">
+   <thead>
+     <tr>
+       <th colspan="3">Past events statistics by category</th>
+     </tr>
+   </thead>
+   <tbody id="tablePastEvents">
+     <tr class="text-center">
+       <td >
+        Categories
+       </td>
+       <td>Revenue</td>
+       <td>Percentage of attendance</td>
+     </tr>
+   </tbody>
+ </table>
+</div>
+
             </main>
             
             
@@ -142,6 +118,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
+      <script src="./scripts/stats.js"></script>
 </body>
 
 </html>
