--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,13 @@
           </a>
     
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./pastEvents.html">Past Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./stats.html">Stats</a>
-        </li>
-      </ul>
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a class="nav-link " aria-current="page" href="./index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pastEvents.html">Past Events</a></li>
+            <li class="nav-item current"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="./stats.html">Stats</a></li>
+          </ul>
       <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center title-container1 border-bottom border-top m-3">
         <h1 class="title">Contact</h1>
     </div>
@@ -47,7 +38,7 @@
 
 
 
-    <form class="row g-3">
+    <form class="row g-3 p-2">
 
       <div class="col-6">
         <label for="inputAddress" class="form-label">Name:</label>
