--- a/details.html
+++ b/details.html
@@ -21,7 +21,7 @@
           </a>
     
           <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
