--- a/stats.html
+++ b/stats.html
@@ -20,23 +20,15 @@
         <img src="./assets/img/Logo_Amazing_Events.png" alt="logo" id="logo" class="bi me-2" width="100" height="30">
           </a>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./pastEvents.html">Past Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Stats</a>
-        </li>
-      </ul>
-      <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center title-container1 border-bottom border-top m-3">
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a class="nav-link " aria-current="page" href="./index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="./upcomingEvents.html">Upcomig Events</a></li>
+            <li class="nav-item"><a class="nav-link" href="./pastEvents.html">Past Events</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+            <li class="nav-item current"><a class="nav-link" href="#">Stats</a></li>
+          </ul>
+          
+      <div class="container-fluid d-flex flex-wrap justify-content-center align-items-center title-container1 border-bottom border-top">
         <h1 class="title">Stats</h1>
     </div>
     </header>
